--- a/색/index.html
+++ b/색/index.html
@@ -3,176 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>색채 심리 테스트</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>나의 색채 심리 테스트</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- 카카오 SDK -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <!-- 구글 애드센스 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- 상단 광고 -->
+    <div class="ad-container">
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-9374368296307755"
+            data-ad-slot="3201247599"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+    </div>
+
     <div class="container">
-        <header>
-            <h1>색채 심리 테스트</h1>
-        </header>
-        
-        <!-- 광고 상단 삽입 -->
-        <div class="ad-container">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
-                crossorigin="anonymous"></script>
-            <!-- k-test 상단 -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-9374368296307755"
-                data-ad-slot="3201247599"
-                data-ad-format="auto"
-                data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
-
-        <form id="colorTestForm">
-            <!-- 섹션 1: 오늘의 기분 -->
-            <section class="question-section active" id="section1">
-                <h2>섹션 1: 오늘의 기분</h2>
-                <div class="question">
-                    <p>1. 오늘 당신의 기분을 가장 잘 표현하는 색은 무엇인가요?</p>
-                    <div class="options">
-                        <label><input type="radio" name="q1" value="red"> 빨강</label>
-                        <label><input type="radio" name="q1" value="blue"> 파랑</label>
-                        <label><input type="radio" name="q1" value="yellow"> 노랑</label>
-                        <label><input type="radio" name="q1" value="green"> 녹색</label>
-                        <label><input type="radio" name="q1" value="purple"> 보라</label>
-                        <label><input type="radio" name="q1" value="black"> 검정</label>
-                        <label><input type="radio" name="q1" value="white"> 흰색</label>
-                    </div>
+        <div class="test-container">
+            <!-- 시작 페이지 -->
+            <div id="start-section">
+                <div class="color-palette">
+                    <div class="color-dot" style="background: #FF6B6B"></div>
+                    <div class="color-dot" style="background: #4ECDC4"></div>
+                    <div class="color-dot" style="background: #FFE66D"></div>
+                    <div class="color-dot" style="background: #95E1D3"></div>
                 </div>
-                <button type="button" class="next-btn">다음</button>
-            </section>
-
-            <!-- 광고 중간 삽입 -->
-            <div class="ad-container">
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
-                    crossorigin="anonymous"></script>
-                <!-- k-test 중간 -->
-                <ins class="adsbygoogle"
-                    style="display:block"
-                    data-ad-client="ca-pub-9374368296307755"
-                    data-ad-slot="3201247599"
-                    data-ad-format="auto"
-                    data-full-width-responsive="true"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
+                <h1>당신의 내면을 보여주는<br>색채 심리 테스트</h1>
+                <p class="intro-text">색을 통해 알아보는 당신의 진짜 모습!</p>
+                <button id="start-btn" class="pulse-btn">테스트 시작하기</button>
             </div>
 
-            <!-- 섹션 2: 스트레스 상황 -->
-            <section class="question-section" id="section2">
-                <h2>섹션 2: 스트레스 상황</h2>
-                <div class="question">
-                    <p>2. 스트레스를 받을 때 가장 끌리는 색상은 무엇인가요?</p>
-                    <div class="options">
-                        <label><input type="radio" name="q2" value="red"> 빨강</label>
-                        <label><input type="radio" name="q2" value="blue"> 파랑</label>
-                        <label><input type="radio" name="q2" value="yellow"> 노랑</label>
-                        <label><input type="radio" name="q2" value="green"> 녹색</label>
-                        <label><input type="radio" name="q2" value="purple"> 보라</label>
-                        <label><input type="radio" name="q2" value="black"> 검정</label>
-                        <label><input type="radio" name="q2" value="white"> 흰색</label>
+            <!-- 질문 페이지 -->
+            <div id="question-section" style="display: none;">
+                <div class="progress-container">
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                    <span class="question-counter">1/10</span>
+                </div>
+                <h2 id="question-text"></h2>
+                <div class="color-choices"></div>
+            </div>
+
+            <!-- 결과 페이지 -->
+            <div id="result-section" style="display: none;">
+                <div class="result-header">
+                    <div class="result-color-display">
+                        <div class="main-color"></div>
+                        <div class="sub-colors">
+                            <div class="sub-color"></div>
+                            <div class="sub-color"></div>
+                        </div>
+                    </div>
+                    <h2>당신의 색채 성향은</h2>
+                    <h1 id="color-result"></h1>
+                </div>
+                <div class="result-content">
+                    <h3 id="result-title"></h3>
+                    <p id="result-description"></p>
+                    <div class="personality-traits">
+                        <h4>성격 특징</h4>
+                        <ul id="traits-list"></ul>
+                    </div>
+                    <div class="color-advice">
+                        <h4>당신에게 좋은 색</h4>
+                        <div id="recommended-colors"></div>
                     </div>
                 </div>
-                <button type="button" class="next-btn">다음</button>
-            </section>
-
-            <!-- 섹션 3: 선호하는 색상 조합 -->
-            <section class="question-section" id="section3">
-                <h2>섹션 3: 선호하는 색상 조합</h2>
-                <div class="question">
-                    <p>3. 당신이 가장 선호하는 색상 조합은 무엇인가요?</p>
-                    <div class="options">
-                        <label><input type="radio" name="q3" value="warm"> 따뜻한 계열 (빨강, 주황, 노랑)</label>
-                        <label><input type="radio" name="q3" value="cool"> 차가운 계열 (파랑, 보라, 녹색)</label>
-                        <label><input type="radio" name="q3" value="neutral"> 중립 계열 (회색, 흰색, 검정)</label>
-                    </div>
+                <div class="share-container">
+                    <button class="share-btn">결과 공유하기</button>
+                    <button class="retry-btn">다시 테스트하기</button>
+                    <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
                 </div>
-                <button type="button" class="next-btn">다음</button>
-            </section>
-
-            <!-- 섹션 4: 중요한 결정 -->
-            <section class="question-section" id="section4">
-                <h2>섹션 4: 중요한 결정</h2>
-                <div class="question">
-                    <p>4. 중요한 결정을 내릴 때 당신을 가장 잘 나타내는 색은 무엇인가요?</p>
-                    <div class="options">
-                        <label><input type="radio" name="q4" value="red"> 빨강</label>
-                        <label><input type="radio" name="q4" value="blue"> 파랑</label>
-                        <label><input type="radio" name="q4" value="yellow"> 노랑</label>
-                        <label><input type="radio" name="q4" value="green"> 녹색</label>
-                        <label><input type="radio" name="q4" value="purple"> 보라</label>
-                        <label><input type="radio" name="q4" value="black"> 검정</label>
-                        <label><input type="radio" name="q4" value="white"> 흰색</label>
-                    </div>
-                </div>
-                <button type="button" class="next-btn">다음</button>
-            </section>
-
-            <!-- 섹션 5: 편안함을 느끼는 색상 -->
-            <section class="question-section" id="section5">
-                <h2>섹션 5: 편안함을 느끼는 색상</h2>
-                <div class="question">
-                    <p>5. 당신이 가장 편안함을 느끼는 색상은 무엇인가요?</p>
-                    <div class="options">
-                        <label><input type="radio" name="q5" value="red"> 빨강</label>
-                        <label><input type="radio" name="q5" value="blue"> 파랑</label>
-                        <label><input type="radio" name="q5" value="yellow"> 노랑</label>
-                        <label><input type="radio" name="q5" value="green"> 녹색</label>
-                        <label><input type="radio" name="q5" value="purple"> 보라</label>
-                        <label><input type="radio" name="q5" value="black"> 검정</label>
-                        <label><input type="radio" name="q5" value="white"> 흰색</label>
-                    </div>
-                </div>
-                <button type="submit" class="submit-btn">결과 보기</button>    
-            </section>
-            <!-- 로딩 팝업 -->
-<div id="loadingPopup" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; justify-content: center; align-items: center; flex-direction: column;">
-    <div style="color: white; text-align: center;">
-        <h2>🎨 색채 심리 분석중...</h2>
-        <p>당신의 성격을 분석하고 있습니다.</p>
-        <div class="loading-spinner"></div>
-    </div>
-</div>
-
-<!-- 광고 컨테이너 -->
-<div id="adContainer" style="display: none; position: fixed; bottom: 0; left: 0; width: 100%; background: white; z-index: 1001;">
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-9374368296307755"
-         data-ad-slot="1724698171"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-</div>
-        </form>
-
-        <!-- 광고 하단 삽입 -->
-        <div class="ad-container">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
-                crossorigin="anonymous"></script>
-            <!-- k-test 하단 -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-9374368296307755"
-                data-ad-slot="3201247599"
-                data-ad-format="auto"
-                data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            </div>
         </div>
+    </div>
 
-        <div id="result" class="result hidden">
-            <h2>당신의 색채 심리 결과</h2>
-            <p id="resultText"></p>
-            <button id="detailedResultBtn">상세 결과 보기</button>
+    <!-- 분석 팝업 -->
+    <div id="ad-popup" class="popup">
+        <div class="popup-content">
+            <div class="analysis-header">
+                <div class="analysis-text">색채 분석중...</div>
+                <div class="color-analysis-animation">
+                    <div class="color-drop"></div>
+                    <div class="color-drop"></div>
+                    <div class="color-drop"></div>
+                </div>
+                <div class="countdown">7</div>
+            </div>
+            
+            <!-- 팝업 광고 -->
+            <div class="popup-ad-container">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="3201247599"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
         </div>
     </div>
 
