--- a/행복/index.html
+++ b/행복/index.html
@@ -27,7 +27,7 @@
             <div class="start-page" id="startPage">
                 <h1 class="main-title">당신의 행복 지수는?</h1>
                 <div class="start-img"></div>
-                <p class="sub-title">나의 진정한 행복 지수를 알아보세요!</p>
+                <p class="sub-title">당신의 진정한 행복 지수는 몇 점일까요? 삶의 만족도, 관계, 성취감, 일상의 소소한 즐거움까지! 전문가가 설문하듯 세심하게 분석해드립니다. 지금 바로 테스트해보세요!</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
